Fix: remove tap-highlight on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,7 @@
 *::before,
 *::after {
   box-sizing: border-box;
+  -webkit-tap-highlight-color: transparent;
 }
 
 body,
